--- a/main.ui
+++ b/main.ui
@@ -15,10 +15,20 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_2">
-    <item row="6" column="0" colspan="2">
-     <widget class="QTableWidget" name="tableWidget"/>
+    <item row="6" column="0">
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
     </item>
-    <item row="7" column="0" colspan="2">
+    <item row="8" column="0" colspan="2">
      <widget class="QLabel" name="label_error">
       <property name="font">
        <font>
@@ -31,18 +41,8 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="0">
-     <spacer name="verticalSpacer">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>40</height>
-       </size>
-      </property>
-     </spacer>
+    <item row="7" column="0" colspan="2">
+     <widget class="QTableWidget" name="tableWidget"/>
     </item>
     <item row="1" column="0" colspan="2">
      <layout class="QGridLayout" name="gridLayout">
@@ -275,6 +275,19 @@
        </widget>
       </item>
      </layout>
+    </item>
+    <item row="5" column="0" colspan="2">
+     <widget class="QFrame" name="frame_chart">
+      <property name="frameShape">
+       <enum>QFrame::Box</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>2</number>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
